--- a/.github/workflows/av-scenechange.yml
+++ b/.github/workflows/av-scenechange.yml
@@ -52,16 +52,16 @@ jobs:
           echo "$LinkPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Clippy
-        run: cargo clippy --features binary,devel,tracing,serialize --tests --benches -- -D warnings
+        run: cargo clippy --features binary,devel,serialize --tests --benches -- -D warnings
 
       - name: Build
-        run: cargo build --features binary,devel,tracing,serialize --tests --benches
+        run: cargo build --features binary,devel,serialize --tests --benches
 
       - name: Run tests
-        run: cargo test --features binary,devel,tracing,serialize
+        run: cargo test --features binary,devel,serialize
 
       - name: Generate docs
-        run: cargo doc --features binary,devel,tracing,serialize --no-deps
+        run: cargo doc --features binary,devel,serialize --no-deps
 
   code-coverage:
     needs: [build]
@@ -81,7 +81,7 @@ jobs:
           tool: cargo-llvm-cov
 
       - name: Generate code coverage
-        run: cargo llvm-cov --features binary,tracing,serialize --lcov --output-path lcov.log --ignore-filename-regex tests\.rs
+        run: cargo llvm-cov --features binary,serialize --lcov --output-path lcov.log --ignore-filename-regex tests\.rs
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
