--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "av-scenechange"
-version = "0.19.1"
+version = "0.19.2"
 authors = ["Josh Holmer <jholmer.in@gmail.com>"]
 edition = "2024"
 rust-version = "1.86"
@@ -8,7 +8,14 @@ description = "Estimates frames in a video where a scenecut would be ideal"
 license = "MIT"
 repository = "https://github.com/rust-av/av-scenechange"
 build = "build.rs"
-exclude = [".github/*", "benches", "test_files"]
+include = [
+    "/src",
+    "LICENSE",
+    "README.md",
+    "Cargo.lock",
+    "Cargo.toml",
+    "build.rs",
+]
 
 [dependencies]
 aligned = "0.4.2"
